k8s/auto-generate/kyligence-enterprise/kyligence-enterprise-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kyligence-enterprise-<<<version>>>
  namespace: <<<namespace>>>
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kyligence-enterprise-<<<version>>>
  template:
    metadata:
      labels:
        app: kyligence-enterprise-<<<version>>>
    spec:
      hostname: kyligence-enterprise-<<<version>>>
      volumes:
        - name: nfs
          persistentVolumeClaim:
            claimName: nfs-share-pvc
        - name: share
          emptyDir: {}
        - configMap:
            name: kyligence-enterprise-config-<<<version>>>
            defaultMode: 0755
          name: kyligence-enterprise-config
        - configMap:
            name: yarn-xml
          name: yarn-xml
        - name: exporter-dir
          emptyDir: {}
        - name: jmx-config
          configMap:
            name: jmx-exporter-config
      containers:
      - name: kyligence-enterprise-<<<version>>>
        image: kyligence/kyligence-env:hadoop_2.10.1_hive_1.2.2
        volumeMounts:
          - mountPath: /opt/kyligence
            name: share
          - mountPath: /opt/kyligence/conf/kylin.properties
            name: kyligence-enterprise-config
            subPath: kylin.properties
          - mountPath: /opt/kyligence/conf/fairscheduler.xml
            name: kyligence-enterprise-config
            subPath: fairscheduler.xml
          - mountPath: /opt/kyligence/hadoop_conf/core-site.xml
            name: yarn-xml
            subPath: core-site.xml
          - mountPath: /opt/kyligence/hadoop_conf/hive-site.xml
            name: yarn-xml
            subPath: hive-site.xml
          - mountPath: /opt/kyligence/hadoop_conf/hiveserver2-site.xml
            name: yarn-xml
            subPath: hive-site.xml
          - mountPath: /opt/kyligence/hadoop_conf/hivemetastore-site.xml
            name: yarn-xml
            subPath: hive-site.xml
          - mountPath: /opt/kyligence/hadoop_conf/hdfs-site.xml
            name: yarn-xml
            subPath: hdfs-site.xml
          - mountPath: /opt/kyligence/hadoop_conf/yarn-site.xml
            name: yarn-xml
            subPath: yarn-site.xml
          - mountPath: /opt/kyligence/hadoop_conf/fair-scheduler.xml
            name: yarn-xml
            subPath: fair-scheduler.xml
          - mountPath: /etc/hadoop/conf/core-site.xml
            name: yarn-xml
            subPath: core-site.xml
          - mountPath: /etc/hadoop/conf/hdfs-site.xml
            name: yarn-xml
            subPath: hdfs-site.xml
          - mountPath: /etc/hadoop/conf/yarn-site.xml
            name: yarn-xml
            subPath: yarn-site.xml
          - mountPath: /etc/hive/conf/hive-site.xml
            name: yarn-xml
            subPath: hive-site.xml
          - mountPath: /etc/hadoop/conf/fair-scheduler.xml
            name: yarn-xml
            subPath: fair-scheduler.xml
          - mountPath: /opt/kyligence/bin/check-env-bypass
            name: kyligence-enterprise-config
            readOnly: false
            subPath: check-env-bypass
          - name: exporter-dir
            mountPath: /opt/jmx-exporter/
          - name: jmx-config
            mountPath: /opt/jmx-exporter/config.yaml
            subPath: config.yaml
        resources:
          limits:
            memory: 4Gi
          requests:
            memory: 4Gi
        ports:
          - name: http
            containerPort: 7070
          - name: spark-ui
            containerPort: 4041
        livenessProbe:
          initialDelaySeconds: 200
          periodSeconds: 10
          timeoutSeconds: 10
          successThreshold: 1
          failureThreshold: 20
          httpGet:
            path: /kylin
            port: http
        readinessProbe:
          initialDelaySeconds: 200
          periodSeconds: 10
          timeoutSeconds: 10
          successThreshold: 1
          failureThreshold: 20
          httpGet:
            path: /kylin
            port: http
        command:
          - bash
          - "-c"
          - |
            set -x
            bash $KYLIN_HOME/bin/kylin.sh start
            if [ -f $KYLIN_HOME/logs/kylin.log ]
            then
              tail -300f $KYLIN_HOME/logs/kylin.log
            else
              tail -300f $KYLIN_HOME/logs/shell.stderr
            fi
        lifecycle:
          preStop:
            exec:
              command:
                - bash
                - "-cx"
                - |
                  bash $KYLIN_HOME/bin/kylin.sh stop
