k8s/auto-generate/kyligence-enterprise/kyligence-enterprise-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: <<<namespace>>>
  name: kyligence-enterprise
spec:
  selector:
    app: kyligence-enterprise
  clusterIP: None
---
apiVersion: v1
kind: Service
metadata:
  namespace: <<<namespace>>>
  name: kyligence-enterprise-ui
spec:
  selector:
    app: kyligence-enterprise
  ports:
    - name: "http"
      port: 7070
      targetPort: 7070
    - name: "spark-ui"
      port: 4040
      targetPort: 4040
