k8s/auto-generate/kyligence-enterprise/kyligence-enterprise-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: <<<namespace>>>
  name: kyligence-enterprise-<<<version>>>
spec:
  rules:
  - host: "<<<version>>>.<<<namespace>>>.kylincorp.com"
    http:
      paths:
      - path: /kylin
        pathType: Prefix
        backend:
          service:
            name: kyligence-enterprise-ui-<<<version>>>
            port:
              number: 7070
